force-app/main/default/objects/VTXY_SubscriberHealth__c/VTXY_SubscriberHealth__c.object-meta.xml
<CustomObject>
    <description>Support dashboard</description>
    <label>Subscriber Health</label>
    <nameField>
        <label>Subscriber Health Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriber Healths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>