force-app/main/default/objects/VTXY_SubscriberHealth__c/fields/AlertMessage__c.field-meta.xml
<CustomField>
    <fullName>AlertMessage__c</fullName>
    <description>Current support alert.</description>
    <label>Alert Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>