force-app/main/default/objects/VTXY_SubscriberHealth__c/fields/HealthStatus__c.field-meta.xml
<CustomField>
    <fullName>HealthStatus__c</fullName>
    <label>Health Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>