force-app/main/default/objects/VTXY_SubscriberHealth__c/fields/LastEntitlementSync__c.field-meta.xml
<CustomField>
    <fullName>LastEntitlementSync__c</fullName>
    <description>Last entitlement check</description>
    <label>Last Entitlement Sync</label>
    <type>DateTime</type>
</CustomField>