force-app/main/default/objects/VTXY_SubscriberHealth__c/fields/LastHeartbeat__c.field-meta.xml
<CustomField>
    <fullName>LastHeartbeat__c</fullName>
    <description>Last heartbeat</description>
    <label>Last Heartbeat</label>
    <type>DateTime</type>
</CustomField>