force-app/main/default/objects/VTXY_SubscriberHealth__c/fields/LastUsageSync__c.field-meta.xml
<CustomField>
    <fullName>LastUsageSync__c</fullName>
    <description>Last usage upload.</description>
    <label>Last Usage Sync</label>
    <type>DateTime</type>
</CustomField>