force-app/main/default/objects/VTXY_SubscriberHealth__c/fields/OpenErrorCount__c.field-meta.xml
<CustomField>
    <fullName>OpenErrorCount__c</fullName>
    <description>Current unresolved errors.</description>
    <label>Open Error Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>